fix: solved issue with the card from metodologia

--- a/index.html
+++ b/index.html
@@ -144,32 +144,24 @@
             requerirás de 1.5 horas de trabajo autónomo.
           </p>
 
-          <div class="row">
-            <div class="col s12 m6">
-              <div class="card clgreyl1">
-                <div class="card-content">
-                  <span class="card-title textoStandar clbktx">Desarrollo de Habilidades</span>
-                  <p class="textoStandar clbktx">
-                    Con este RDD, tendrás oportunidad de lograr habilidades para planificar, organizar y supervisar todas las
-                    fases de un proyecto informático, así como habilidades orientadas a la creatividad y a la optimización del
-                    proyecto además las relacionadas con el dominio de las tecnologías, herramientas y metodologías propias del
-                    desarrollo de software.
-                  </p>
-                </div>
-              </div>
+          <div style="display: flex; flex-wrap: wrap; gap: 20px; margin: 20px 0;">
+            <div style="flex: 1; min-width: 300px; background: #f5f5f5; padding: 20px; border-radius: 4px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+              <h5 style="margin-top: 0; color: #333;">Desarrollo de Habilidades</h5>
+              <p class="textoStandar clbktx">
+                Con este RDD, tendrás oportunidad de lograr habilidades para planificar, organizar y supervisar todas las
+                fases de un proyecto informático, así como habilidades orientadas a la creatividad y a la optimización del
+                proyecto además las relacionadas con el dominio de las tecnologías, herramientas y metodologías propias del
+                desarrollo de software.
+              </p>
             </div>
 
-            <div class="col s12 m6">
-              <div class="card clgreyl1">
-                <div class="card-content">
-                  <span class="card-title textoStandar clbktx">Gestión y Desarrollo</span>
-                  <p class="textoStandar clbktx">
-                    Al gestionar y desarrollar un proyecto informático, no solo mejorarás tus habilidades técnicas, sino que
-                    también fortalecerás tu capacidad para planificar, colaborar, analizar problemas y proponer soluciones desde
-                    el punto de vista de la informática que satisfagan necesidades humanas y adaptarlas a nuevas situaciones.
-                  </p>
-                </div>
-              </div>
+            <div style="flex: 1; min-width: 300px; background: #f5f5f5; padding: 20px; border-radius: 4px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+              <h5 style="margin-top: 0; color: #333;">Gestión y Desarrollo</h5>
+              <p class="textoStandar clbktx">
+                Al gestionar y desarrollar un proyecto informático, no solo mejorarás tus habilidades técnicas, sino que
+                también fortalecerás tu capacidad para planificar, colaborar, analizar problemas y proponer soluciones desde
+                el punto de vista de la informática que satisfagan necesidades humanas y adaptarlas a nuevas situaciones.
+              </p>
             </div>
           </div>
 
@@ -178,17 +170,15 @@
             Aprendizaje de formulación y evaluación de proyectos informáticos, las cuales a continuación se mencionan:
           </p>
 
-          <div class="card clgreyl1">
-            <div class="card-content">
-              <span class="card-title textoStandar clbktx">Unidades Temáticas</span>
-              <ul class="textoStandar clbktx" style="list-style-type: none; padding-left: 20px;">
-                <li>• Unidad temática I: Aspectos generales de un proyecto y el análisis del entorno.</li>
-                <li>• Unidad temática II: Innovación y la gestión del mercado</li>
-                <li>• Unidad temática III: Gestión técnica y ambiental del proyecto</li>
-                <li>• Unidad temática IV: Gestión del presupuesto del proyecto</li>
-                <li>• Unidad temática V: Evaluación Financiera del proyecto</li>
-              </ul>
-            </div>
+          <div style="background: #f5f5f5; padding: 20px; border-radius: 4px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); margin: 20px 0;">
+            <h5 style="margin-top: 0; color: #333;">Unidades Temáticas</h5>
+            <ul class="textoStandar clbktx" style="list-style-type: none; padding-left: 20px;">
+              <li>• Unidad temática I: Aspectos generales de un proyecto y el análisis del entorno.</li>
+              <li>• Unidad temática II: Innovación y la gestión del mercado</li>
+              <li>• Unidad temática III: Gestión técnica y ambiental del proyecto</li>
+              <li>• Unidad temática IV: Gestión del presupuesto del proyecto</li>
+              <li>• Unidad temática V: Evaluación Financiera del proyecto</li>
+            </ul>
           </div>
 
           <p class="textoStandar clbktx">
@@ -198,71 +188,53 @@
             secciones antes mencionadas:
           </p>
 
-          <div class="row">
-            <div class="col s12 m6">
-              <div class="card clgreyl1">
-                <div class="card-content">
-                  <span class="card-title textoStandar clbktx">Contenidos</span>
-                  <p class="textoStandar clbktx">
-                    En este apartado encontrarás la explicación de cada uno de los temas, en algunos casos
-                    visualizarás botones en los que al hacer clic podrás consultar o bien descargar: lecturas o actividades de
-                    aprendizaje. En lo que se refiere a las actividades de aprendizaje todas tienen valor para la evaluación; se
-                    realizarán en el aula (en el horario de clase); se desarrollarán en equipo y se subirán en la plataforma
-                    indicada por el profesor(a).
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col s12 m6">
-              <div class="card clgreyl1">
-                <div class="card-content">
-                  <span class="card-title textoStandar clbktx">Material de Apoyo</span>
-                  <p class="textoStandar clbktx">
-                    En esta sección tendrás disponibles: presentaciones en PowerPoint con la explicación de
-                    los temas de cada unidad temática, lecturas y actividades de aprendizaje.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col s12 m6">
-              <div class="card clgreyl1">
-                <div class="card-content">
-                  <span class="card-title textoStandar clbktx">Glosario</span>
-                  <p class="textoStandar clbktx">
-                    En este apartado del menú, podrás encontrar términos (incluido en el RDD), que te mostraran su
-                    significado debidamente referenciado.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col s12 m6">
-              <div class="card clgreyl1">
-                <div class="card-content">
-                  <span class="card-title textoStandar clbktx">Fuentes de Consulta</span>
-                  <p class="textoStandar clbktx">
-                    En este apartado encontrarás las fuentes de consulta con base en las cuales se
-                    desarrollaron los contenidos de la unidad temática.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="card clgreyl1">
-            <div class="card-content">
-              <span class="card-title textoStandar clbktx">Nota Importante</span>
+          <div style="display: flex; flex-wrap: wrap; gap: 20px; margin: 20px 0;">
+            <div style="flex: 1; min-width: 300px; background: #f5f5f5; padding: 20px; border-radius: 4px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+              <h5 style="margin-top: 0; color: #333;">Contenidos</h5>
               <p class="textoStandar clbktx">
-                Cabe destacar que este recurso didáctico digital fue elaborado por curaduría de contenidos con información
-                adaptada y recuperada de manera intacta de obras de distintos autores, por consiguiente, son citados en el
-                apartado fuentes de consulta y con su respectiva referencia a lo largo de los textos, respetando así, su
-                autoría para el desarrollo de este recurso.
+                En este apartado encontrarás la explicación de cada uno de los temas, en algunos casos
+                visualizarás botones en los que al hacer clic podrás consultar o bien descargar: lecturas o actividades de
+                aprendizaje. En lo que se refiere a las actividades de aprendizaje todas tienen valor para la evaluación; se
+                realizarán en el aula (en el horario de clase); se desarrollarán en equipo y se subirán en la plataforma
+                indicada por el profesor(a).
               </p>
             </div>
+
+            <div style="flex: 1; min-width: 300px; background: #f5f5f5; padding: 20px; border-radius: 4px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+              <h5 style="margin-top: 0; color: #333;">Material de Apoyo</h5>
+              <p class="textoStandar clbktx">
+                En esta sección tendrás disponibles: presentaciones en PowerPoint con la explicación de
+                los temas de cada unidad temática, lecturas y actividades de aprendizaje.
+              </p>
+            </div>
+          </div>
+
+          <div style="display: flex; flex-wrap: wrap; gap: 20px; margin: 20px 0;">
+            <div style="flex: 1; min-width: 300px; background: #f5f5f5; padding: 20px; border-radius: 4px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+              <h5 style="margin-top: 0; color: #333;">Glosario</h5>
+              <p class="textoStandar clbktx">
+                En este apartado del menú, podrás encontrar términos (incluido en el RDD), que te mostraran su
+                significado debidamente referenciado.
+              </p>
+            </div>
+
+            <div style="flex: 1; min-width: 300px; background: #f5f5f5; padding: 20px; border-radius: 4px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+              <h5 style="margin-top: 0; color: #333;">Fuentes de Consulta</h5>
+              <p class="textoStandar clbktx">
+                En este apartado encontrarás las fuentes de consulta con base en las cuales se
+                desarrollaron los contenidos de la unidad temática.
+              </p>
+            </div>
+          </div>
+
+          <div style="background: #f5f5f5; padding: 20px; border-radius: 4px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); margin: 20px 0;">
+            <h5 style="margin-top: 0; color: #333;">Nota Importante</h5>
+            <p class="textoStandar clbktx">
+              Cabe destacar que este recurso didáctico digital fue elaborado por curaduría de contenidos con información
+              adaptada y recuperada de manera intacta de obras de distintos autores, por consiguiente, son citados en el
+              apartado fuentes de consulta y con su respectiva referencia a lo largo de los textos, respetando así, su
+              autoría para el desarrollo de este recurso.
+            </p>
           </div>
 
           <div class="defaultImage">
@@ -292,13 +264,6 @@
           <p class="textoStandar clbktx">
             Con el propósito de puedas obtener mejores resultados en cuanto a tu aprendizaje te sugerimos estudiar cada una de las unidades temáticas en la secuencia en la que aparecen y desarrollar cada una de las actividades de aprendizaje siguiendo las indicaciones. Si deseas profundizar aún más en algún tema, te recomendamos consultar la bibliografía detallada en el programa académico.
           </p>
-
-          <div class="defaultImage">
-            <div class="defaultImageContent" id="proposito"></div>
-          </div>
-          <span class="referenciaIcono clgreyl1 border1 clbktx">Ilustración de &nbsp; <a
-              href="https://icons8.com/illustrations/style--pixeltrue">Pixel true</a> &nbsp;, &nbsp; <a
-              href="https://icons8.com/illustrations/">Ouch!</a></span>
         </section>
 
         <!--Contenido de carga de la página-->
