fix: solved issue with the card from metodologia

--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
       <li class="tab col s3 cl2" id="a9tutorialButton"><a class="white-text" href="#test-swipe-4">Evaluación de los aprendizajes</a></li>
       <li class="tab col s3 cl2" id="a10tutorialButton"><a class="white-text" href="#test-swipe-5">Requerimientos</a></li>
       <li class="tab col s3 cl2" id="a11tutorialButton"><a class="white-text" href="#test-swipe-6">Fuentes de consulta</a></li>
-      <li class="tab col s3 cl2" id="a12tutorialButton"><a class="white-text" href="#test-swipe-7">Unidad de competencia</a></li>
     </ul>
   </section>
 
@@ -354,23 +353,21 @@
           <p class="textoStandar clbktx">
             Para acceder y hacer uso de este curso se requiere
           </p>
-          <div class="card clgreyl1">
-            <div class="card-content">
-              <span class="card-title textoStandar clbktx"><i class="material-icons left">info</i>Requerimientos para el curso</span>
-              <ul class="textoStandar clbktx" style="margin-top: 10px;">
-                <li><i class="material-icons left" style="color:#7BA7CC;">wifi</i>Conexión a internet estable</li>
-                <li><i class="material-icons left" style="color:#7BA7CC;">language</i>Navegador web actualizado</li>
-                <li style="margin-left:32px;">• Google Chrome</li>
-                <li style="margin-left:32px;">• Mozilla Firefox</li>
-                <li style="margin-left:32px;">• Microsoft Edge</li>
-                <li style="margin-left:32px;">• Safari</li>
-              </ul>
-              <div class="divider" style="margin: 16px 0;"></div>
-              <p class="textoStandar clbktx" style="margin-bottom:0;">
-                <i class="material-icons left" style="color:#7BA7CC;">tips_and_updates</i>
-                <strong>Recomendación:</strong> Usa la versión más reciente de tu navegador para una mejor experiencia.
-              </p>
-            </div>
+          <div style="background: #f5f5f5; padding: 20px; border-radius: 4px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); margin: 20px 0;">
+            <h5 style="margin-top: 0; color: #333;"><i class="material-icons left">info</i>Requerimientos para el curso</h5>
+            <ul class="textoStandar clbktx" style="margin-top: 10px;">
+              <li><i class="material-icons left" style="color:#7BA7CC;">wifi</i>Conexión a internet estable</li>
+              <li><i class="material-icons left" style="color:#7BA7CC;">language</i>Navegador web actualizado</li>
+              <li style="margin-left:32px;">• Google Chrome</li>
+              <li style="margin-left:32px;">• Mozilla Firefox</li>
+              <li style="margin-left:32px;">• Microsoft Edge</li>
+              <li style="margin-left:32px;">• Safari</li>
+            </ul>
+            <div style="border-top: 1px solid #ddd; margin: 16px 0;"></div>
+            <p class="textoStandar clbktx" style="margin-bottom:0;">
+              <i class="material-icons left" style="color:#7BA7CC;">tips_and_updates</i>
+              <strong>Recomendación:</strong> Usa la versión más reciente de tu navegador para una mejor experiencia.
+            </p>
           </div>
 
           <div class="defaultImage">
@@ -393,13 +390,15 @@
 
         <section class="readyContentScreen">
           <p class="textoTitulo clbktx">Fuentes de consulta</p>
-          <p class="textoStandar clbktx">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, obcaecati recusandae dignissimos
-            consequuntur itaque assumenda voluptas dicta aspernatur iusto suscipit quas! Quidem iusto beatae quaerat
-            cupiditate eum fuga omnis maiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum labore
-            minima excepturi incidunt voluptatibus culpa expedita quod explicabo, cumque voluptatum accusamus, similique
-            laboriosam magnam! Obcaecati harum nemo molestias adipisci quas?
-          </p>
+          <div style="background: #f5f5f5; padding: 20px; border-radius: 4px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); margin: 20px 0;">
+            <p class="textoStandar clbktx">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, obcaecati recusandae dignissimos
+              consequuntur itaque assumenda voluptas dicta aspernatur iusto suscipit quas! Quidem iusto beatae quaerat
+              cupiditate eum fuga omnis maiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum labore
+              minima excepturi incidunt voluptatibus culpa expedita quod explicabo, cumque voluptatum accusamus, similique
+              laboriosam magnam! Obcaecati harum nemo molestias adipisci quas?
+            </p>
+          </div>
           <div class="defaultImage">
             <div class="defaultImageContent" id="fuentes"></div>
           </div>
